Added some more tags and improved the layout of the page.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Cheat Sheat for HTML Forms</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="html,css,Cheatsheat,how to">
 </head>
 <body>
-    <h1>HTML Forms Cheatsheat</h1>
+	
+    <h1 class="cheatsheet"><img src="images/cheatsheet.png" align="middle"><abbr title="HyperText Markup Language"> HTML</abbr></dfn> Cheatsheat</h1>
+    
     <h2>Form Elements</h2>
+    <!--Starting of first table-->
     <table>
     	<thead>
     		<tr>
@@ -41,6 +47,76 @@
     		    <td><span class="syntax">&ltfieldset&gt</span></td>
     		    <td>The fieldset element is used to group related elements together.</td> 
     		</tr>
+    	</tbody>
+    </table>
+    <!--Ending of first table-->
+
+    <h2>Common HTML Tags and their Use</h2>
+    <table>
+    	<thead>
+    		<tr>
+    			<th>Tags</th>
+    			<th>Syntax</th>
+    			<th>Description</th>
+    		</tr>
+    	</thead>
+    	<tbody>
+    		<tr>
+    		    <th>The Comment Tag</th>
+    		    <td><span class="syntax">&lt;--...--&gt;</span></td>
+    		    <td>The comment tag is used to add comments and description to your html documents. They are not displayed on the webpage. Their main purpose is increase readibility of your code.<br>
+                <img src="images/comments.png" />  
+    		    </td>
+    		</tr>
+    		<tr>
+    			<th>The <span style="background-color: beige">&lt;a&gt;</span> Tag</th>
+    			<td><span class="syntax">&lt;a&gt;</span></td>
+    			<td>The &lt;a&gt; defines hyperlinks, which is used to connect to other web pages. It's most important attribute is <strong>href</strong> which indicates the links description.
+    		    <br>
+    		    <img src="images/a.png" />
+    		    </td>
+    		</tr>
+    		<tr>
+    			<th>The Abbreviation Tag</th>
+    			<td><span class="syntax">&lt;abbr&gt;</span></td>
+    			<td>The abbreviation tag defines an abbreviation or an acronym like HTML, CSS etc.
+    			<br>
+    			<img src="images/abbreviation.png">	
+    			</td>
+    		</tr>
+    		<tr>
+    			<th>The Address Tag</th>
+    			<td><span class="syntax">&lt;address&gt;</td>
+    			<td>The address tag defines the contact information of the author or owner of the document.<br>
+    			<img src="images/address.png">
+    			</td>	
+    		</tr>
+    		<tr>
+    			<th>The Article Tag</th>
+    			<td><span class="syntax">&lt;article&gt;</span></td>
+    			<td>The article tag specifies independent, self-contained content.An article should make sense on its own and it should be possible to distribute it independently from the rest of the site.<br>
+    		    <img src="images/article.png"></td>
+    		</tr>
+    		<tr>
+    			<th>The Aside Tag</th>
+    			<td><span class="syntax">&lt;aside&gt;</span></td>
+    			<td>The aside tag defines some content aside from the content it is placed in. The aside tag should indirectly be connected to the surrounding content.<br>
+                <img src="images/aside.png">
+    			</td>
+    		</tr>
+    		<tr>
+    			<th>The Blockquote Tag</th>
+    			<td><span class="syntax">&gt;blockquote&gt;</span></td>
+    			<td>The blockquote specifies a section that is quoted form another source. Browsers usually indent blockquote.<br>
+                <img src="images/blockquote.png">
+    			</td>
+    		</tr>
+    		<tr>
+    			<th>The Body Element</th>
+    			<td><span class="syntax">&lt;body&gt;</span></td>
+    			<td>The body element is almost used in all HTML projects. It defines the document's body.<br>
+    			<img src="images/body.png"></td>
+    		</tr>    
     	</tbody>
     </table>
 </body>
